* Simulated CPU implementation was inserted in HDDSS but it has not been tested yet. * PBFTClient has a adaptive approach to compute the re-transmition timeout (we use TCP Algorithm what is very similar but doesn't is the same used in original PBFT approach). * Missed request message approach was improved, new checks were introduced which has decreased the discard of messages.